fix overflow

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -175,7 +175,6 @@ Max-width 600px CSS
 	}
 	.social {
 	    padding: 0;
-	    width: 420px;
 	    margin: 0 auto;
 	    position: relative;
 		display: block;
